# wheat-disease-diagnosis-system

./: .gitattributes  .gitignore  API_USAGE.md  ARCHITECTURE.md  AUDIT_REPORT.md  CODE_WIKI.md  CUDA_INSTALL_GUIDE.md  DATABASE_AUDIT_REPORT.md  DATA_PREPARATION.md  DEPLOYMENT_REPORT.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_PLAN.md  DIAGNOSIS_TEST_REPORT.md  FINAL_DELIVERY_REPORT.md  FULL_IMPLEMENTATION_REPORT.md  GPU_SETUP_COMPLETE.md  IMPLEMENTATION_REPORT_V2.md  INSTALLATION.md  LLaVA_IMPLEMENTATION_SUMMARY.md  PROJECT_REORGANIZATION_REPORT.md  PYTHON310_SETUP_GUIDE.md  README.md  SYSTEM_IMPROVEMENT_REPORT.md  TEST_REPORT.md  TRAINING.md  USER_GUIDE.md  analyze_references.py  analyze_references_v2.py  boundary_test_results.json  check_cuda_env.py  check_refs.py  check_torch.py  compatibility_test_report.json  demo_system.py  diagnosis_test_report.json  extract_references.py  fix_label_filenames.py  generate_introduction.py  inference_engine_bottleneck_report.json  install_cuda_toolkit.ps1  (+43 more)
src/web/backend/: .env.example  .flake8  .pre-commit-config.yaml  README.md  TEST_ENVIRONMENT_VALIDATION_REPORT.md  _update_role.py  debug_knowledge_api.py  fix_diseases_table.py  openapi_analysis.json  performance_analysis_report.json  performance_report.json  pyproject.toml  pytest.ini  requirements.txt  start-dev.ps1  start_server.bat  startup_test_results.json  test_user_authentication.py  user_auth_test_results.json  uvicorn.conf.py  v21_e2e_test.py  v21_quick_test.py  v21_unit_test.py  verify_password_hash_fix.py
src/web/backend/app/: __init__.py  main.py  rate_limiter.py
src/web/backend/app/core/: __init__.py  ai_config.py  cache_decorators.py  config.py  database.py  metrics.py  (+15 more)
src/web/backend/benchmarks/: BASELINE_PERFORMANCE.md  __init__.py  benchmark_full_diagnosis.py  benchmark_qwen_inference.py  benchmark_results.json  benchmark_sse_latency.py  benchmark_yolo_inference.py  run_all_benchmarks.py
src/web/backend/docs/: PERFORMANCE_OPTIMIZATION.md
src/web/backend/migrations/: __init__.py  env.py
src/web/backend/requirements/: base.txt  dev.txt  ml-cpu.txt  ml-gpu.txt
src/web/backend/scripts/: create_indexes.py  deep_performance_analysis.py  e2e_diagnosis_test.py  e2e_optimization_test.py  fusion_diagnosis_e2e_test.py  generate_disease_images.py  generate_secrets.py  hardware_bottleneck_analysis.py  hardware_bottleneck_result.json  inference_benchmark.py  inference_engine_bottleneck_analysis.py  init_db.py  integration_test.py  integration_test_fix.py  mark_migration.py  optimization_validation_report.py  performance_benchmark_suite.py  preprocessing_bottleneck_analysis.py  replace_disease_images.py  run_migrations.py  seed_disease_knowledge.py  test_sse_diagnosis.py  v46_e2e_test.py  v46_test_report.json  verify_flash_attention.py  verify_int4_config.py
src/web/backend/tests/: PERFORMANCE_REPORT.md  cache_hit_rate_test.py  conftest.py  coverage.xml  e2e_test_results.json  generate_test_data.py  performance_test.py  run_integration_test.py  run_tests.py  test_async_migration.py  test_auth.py  test_cache.py  test_config_settings_v2.py  test_core_unit.py  test_deep_integration.py  test_e2e.py  test_e2e_simple.py  test_exceptions_handler.py  test_exceptions_unit.py  test_file_validator.py  test_fusion_annotator.py  test_fusion_engine.py  test_fusion_feature_extractor.py  test_fusion_service.py  test_fusion_service_facade.py  test_index_performance.py  test_integration_auth.py  test_integration_diagnosis.py  test_integration_multimodal.py  test_password_hash_security.py  test_performance.py  test_qwen_loader_fix.py  test_schemas_unit.py  test_security_fixes.py  test_security_injection.py  test_security_unit.py  test_startup.py  test_user.py  test_utils_unit.py  test_yolo_service.py
(+848 files in other folders)
