[project]
name = "wheatagent-backend"
version = "1.0.0"
description = "WheatAgent Backend API"
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | __pycache__
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "migrations",
    "node_modules",
]
known_first_party = ["app"]
known_third_party = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pymysql",
    "redis",
    "jose",
    "passlib",
    "pydantic",
    "celery",
    "minio",
    "dotenv",
    "slowapi",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
exclude = [
    "migrations/",
    "scripts/",
    "tests/",
    "build/",
    "dist/",
    "node_modules/",
    "\\.venv/",
    "__pycache__/",
]

[[tool.mypy.overrides]]
module = [
    "ultralytics.*",
    "torch.*",
    "transformers.*",
    "PIL.*",
    "numpy.*",
    "cv2.*",
    "fastapi.*",
    "pydantic.*",
    "sqlalchemy.*",
    "redis.*",
    "celery.*",
    "minio.*",
    "jose.*",
    "passlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:tests/coverage_report",
    "--cov-report=xml:tests/coverage.xml",
    "--cov-fail-under=0",
]
markers = [
    "slow: 标记运行较慢的测试",
    "integration: 标记集成测试",
    "unit: 标记单元测试",
    "e2e: 标记端到端测试",
    "api: 标记 API 测试",
    "db: 标记需要数据库的测试",
    "auth: 标记需要认证的测试",
    "ai: 标记需要 AI 模型的测试",
    "gpu: 标记需要 GPU 的测试",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "tests/test.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
xfail_strict = true
junit_family = "xunit2"

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/main.py",
    "app/__init__.py",
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "if settings.DEBUG:",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "tests/coverage_report"

[tool.coverage.xml]
output = "tests/coverage.xml"
